--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1 {
   font-size: 2em;
   vertical-align: middle;
   z-index: 5;
-  color: white;
+  color:black;
 }
 
 #map {
@@ -153,11 +153,13 @@ font-size: 1em;
 .boutonClass {
   display: none;
   z-index: 4;
-  width: 5%;
-  height: 10%;
   position: relative;
   background-repeat: no-repeat;
   background-size: contain;
+}
+.boutonClass img{
+  width: 50px; 
+  margin: 20px;
 }
 
 .infoClass{
@@ -166,11 +168,41 @@ font-size: 1em;
   height: auto;
 }
 
+.error{
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+
 @media (max-width: 1300px) {
 
 .joueurClass {
 font-size: 0.7em;
 width: 100px;
 height: 200px;
+}
+
+.boutonClass img{
+  width: 20px; 
+  margin: 10px;
+}
+}
+
+
+@media (max-width: 1100px) {
+
+  .error{  
+    background-color:brown;
+    width: 70%;
+    height: auto;
+    text-align: center;
+    vertical-align: middle;
+    top: 40%;
+    left: 20%;
+  }
+
+  .map{
+display: none;
 }
 }
